Update pwr.sh